# ant-sim

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/ant_sim/: ant.py  board.py  game.py
