# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ant-sim"
version = "0.1.0"
authors = [
    { name = "Jon Petersen and Aaron Braatz", email = "jon.petersen@web.de" }
]
description = "A simulation of a ant collony collecting food."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[tool.setuptools.packages.find]
where = ["src"]
